fix(View): enable right area scroll when overflow

--- a/webapp/app/containers/View/View.less
+++ b/webapp/app/containers/View/View.less
@@ -4,6 +4,7 @@
   flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 
   .header {
     height: 64px;
